<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ZTermsofService">

    <TextView
        android:id="@+id/tos_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_service_title"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:fontFamily="@font/f3"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tos_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tos_intro_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tos_intro_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_intro"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_acceptable_use_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_acceptable_use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_acceptable_use"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_acceptable_use_list"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_ai_generated_responses_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_ai_generated_responses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_ai_generated_responses"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_user_responsibility_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_user_responsibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_user_responsibility"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_privacy_data_usage_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_privacy_data_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_privacy_data_usage"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_service_availability_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_service_availability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_service_availability"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_intellectual_property_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_intellectual_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_intellectual_property"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_limitation_liability_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_limitation_liability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_limitation_liability"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_termination_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_termination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_termination"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_changes_terms_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_changes_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_changes_terms"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_contact_us_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_contact_us"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tos_acceptance_terms_title"
                android:textSize="25sp"
                android:fontFamily="@font/f4"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tos_acceptance_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tos_acceptance_terms"
                android:textSize="16sp"
                android:fontFamily="@font/f2"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>